21/08/09 Julien Dutheil
* Added config files for CMake.

12/08/09 Bastien Boussau & Julien Dutheil
* Function getValue in likelihood classes now does not repeat calculations
  if called several times on the same parameters.

09/08/09 Julien Dutheil
* Added PhyloStatistics class for computing several quantities on a tree
  in an efficient manner.

08/08/09 Bastien Boussau
* Added support for reading trees with id in TreeTemplateTools.

07/08/09 Sophie Abby & Julien Dutheil
* [biopp-help-forum:214] Bug fixed in cloneSubtree, remove the link toward the
father node of the root node of the subtree.

05/08/09 Julien Dutheil
* TreeDrawing classes improved.

22/07/09 Julien Dutheil
* Added TreeDrawing classes.

29/06/09 Julien Dutheil
* Upgraded TreeLikelihood interfaces and SubstitutionModel interface + code lifting.
* New class TreeLikelihoodTools
* Added computation of expected ancestral frequencies.
* Added computation of ancestral frequencies using an empirical bayesian
  approach.

27/06/09 Céline Scornavacca & Julien Dutheil
* Newick and Nexus tree output now use polymorphism in order to print
TreeTemplate objects more efficiently.

24/06/09 Julien Dutheil
* Change precision output while printing parameters.

24/06/09 Laurent Gueguen
* Added codon and general word models.

23/06/09 Julien Dutheil
* Compatibility update: now containers returns references instead of pointers.
* TreeTemplate now uses pointers and not references.
* Added dropTip function in TreeTemplateTools.

10/06/09 -*- Version 1.8.0 -*-

05/06/09 Julien Dutheil
* Bug fixed in Newick parser!

28/05/09 Julien Dutheil
* A hell of bugs fixed!
* Better support for the new model syntax in PhylogeneticsApplicationTools
* Support for the Nexus tree format (single tree, read only for now).

15/05/09 Julien Dutheil
* New syntax for model specification in PhylogeneticApplicationTools.

07/03/09 Julien Dutheil
* Added pseudo counts in substitution models, when setting equilibrium